airflow/logs/scheduler/2026-01-13/PythonAndBranchPythonExample.py.log
[2026-01-13T02:50:51.641+0000] {processor.py:161} INFO - Started process (PID=4375) to work on /opt/airflow/dags/PythonAndBranchPythonExample.py
[2026-01-13T02:50:51.648+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/PythonAndBranchPythonExample.py for tasks to queue
[2026-01-13T02:50:51.654+0000] {logging_mixin.py:188} INFO - [2026-01-13T02:50:51.653+0000] {dagbag.py:545} INFO - Filling up the DagBag from /opt/airflow/dags/PythonAndBranchPythonExample.py
[2026-01-13T02:50:51.779+0000] {logging_mixin.py:188} INFO - [2026-01-13T02:50:51.777+0000] {dagbag.py:355} ERROR - Failed to import: /opt/airflow/dags/PythonAndBranchPythonExample.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/dagbag.py", line 351, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/PythonAndBranchPythonExample.py", line 10
    from airflow.providers.google
                                 ^
SyntaxError: invalid syntax
[2026-01-13T02:50:51.781+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/PythonAndBranchPythonExample.py
[2026-01-13T02:50:51.986+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/PythonAndBranchPythonExample.py took 0.368 seconds
[2026-01-13T02:51:26.383+0000] {processor.py:161} INFO - Started process (PID=4384) to work on /opt/airflow/dags/PythonAndBranchPythonExample.py
[2026-01-13T02:51:26.394+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/PythonAndBranchPythonExample.py for tasks to queue
[2026-01-13T02:51:26.397+0000] {logging_mixin.py:188} INFO - [2026-01-13T02:51:26.396+0000] {dagbag.py:545} INFO - Filling up the DagBag from /opt/airflow/dags/PythonAndBranchPythonExample.py
[2026-01-13T02:51:26.516+0000] {logging_mixin.py:188} INFO - [2026-01-13T02:51:26.514+0000] {dagbag.py:355} ERROR - Failed to import: /opt/airflow/dags/PythonAndBranchPythonExample.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/dagbag.py", line 351, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/PythonAndBranchPythonExample.py", line 10
    from airflow.providers.google
                                 ^
SyntaxError: invalid syntax
[2026-01-13T02:51:26.519+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/PythonAndBranchPythonExample.py
[2026-01-13T02:51:26.722+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/PythonAndBranchPythonExample.py took 0.361 seconds
